--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,41 @@
 body {
-    background-color: #f5f5f5;
-    font-family: 'Roboto', sans-serif;
+    background-color: #f1f4f6;
+    font-family: 'Georgia', serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
+    color: #182d42;
     text-align: left;
     margin: 0;
-    padding: 0;
+    padding: 20px;
     overflow-x: hidden;
 }
 
 h1 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Georgia', serif;
     font-weight: 400;
+    font-size: 25px;
     margin: 0;
     padding: 0;
 }
 
+h2 {
+    font-family: 'Georgia', serif;
+    font-weight: 300;
+    font-size: 20px;
+}
+
+h4 {
+    font-family: 'Georgia', serif;
+    font-weight: 400;
+    font-size: 17px;
+    margin: 0;
+    padding: 0;
+    font-style: italic;
+}
+
 p {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Georgia', serif;
     font-weight: 400;
     margin: 0;
     padding: 0;
@@ -28,4 +44,67 @@ p {
 img {
     max-width: 100%;
     height: auto;
+}
+
+.indented-paragraph {
+    text-indent: 30px;
+}
+
+a {
+    color: #182d42;
+    text-decoration: underline;
+}
+
+/* Styling for the contact form */
+.contact-form {
+    border: 1px solid #ccc; /* Thin border around the form */
+    padding: 20px;
+    background-color: #f8f8f8;
+    max-width: 400px; /* Maximum width of the form */
+    margin: 0 auto; /* Center the form */
+    border-radius: 4px; /* Slightly rounded corners */
+    box-sizing: border-box;
+}
+
+/* Styling for form labels */
+.contact-form label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: normal;
+}
+
+/* Styling for form inputs and textarea */
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+.contact-form input[type="tel"],
+.contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+/* Styling for the submit button */
+.contact-form input[type="submit"] {
+    background-color: #2e5a7a; /* Green background */
+    color: white; /* White text */
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.contact-form input[type="submit"]:hover {
+    background-color: #154168; /* Darker green on hover */
+}
+
+.bordered-section {
+    border: 1px solid #333; /* Defines the border's width, style, and color */
+    padding: 1cap; /* Adds space inside the border */
+    margin: 10px; /* Adds space outside the border */
+    border-radius: 8px; /* Optional: adds rounded corners to the border */
+    background-color: #eaeff2; /* Optional: adds background color inside the border */
 }
