--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
+
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* Space between items */
+    justify-content: space-between;
+}
+
+.flex-item {
+    flex: 1 1 350px; /* Grow, shrink, basis */
+    padding: 20px;
+    border: 1px solid #333;
+    border-radius: 8px;
+    background-color: #eaeff2;
+}
+
+#about, #contact {
+    flex: 0 100%;
+}
+
 body {
     background-color: #f1f4f6;
     font-family: 'Georgia', serif;
@@ -94,7 +115,6 @@ button {
     font-size: 15px;
 }
 
-/*
 
 #languageFin {
     padding: 3px 10px;
@@ -109,40 +129,9 @@ button {
 
 }
 
-.contact-form {
-    border: 1px solid #ccc;
-    padding: 20px;
-    background-color: #f8f8f8;
-    max-width: 400px; 
-    margin: 0 auto;
-    border-radius: 4px; 
-    box-sizing: border-box;
+@media (max-width: 600px) {
+    .flex-container {
+        flex-direction: column; /* Stack items vertically on small screens */
+        flex: 1 1 100%
+    }
 }
-
-.contact-form label {
-    display: block;
-    margin-bottom: 8px;
-    font-weight: normal;
-}
-.contact-form input[type="text"],
-.contact-form input[type="email"],
-.contact-form input[type="tel"],
-.contact-form textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-.contact-form input[type="submit"] {
-    background-color: #2e5a7a;
-    color: white; 
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 15px;
-}
- */
