--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,55 @@ button {
     background-color: #244969; /* Darker green on hover */
 }
 
+/* Hamburger Icon */
+.hamburger-menu {
+    position: relative;
+    display: flex; /* Always visible */
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 22px;
+    cursor: pointer;
+    z-index: 10; /* Ensure it's on top */
+    margin: 20px; /* Adjust as needed */
+}
+
+/* Hamburger icon bars */
+.hamburger-menu .bar {
+    width: 100%;
+    height: 4px;
+    background-color: #333; /* Adjust the color */
+    margin: 3px 0;
+    border-radius: 2px;
+}
+
+/* Hide the menu by default */
+.nav-menu {
+    display: none;
+}
+
+/* When active, show the menu */
+.nav-menu.active {
+    display: block;
+}
+
+nav ul {
+    list-style: none;
+    padding-left: 25px;
+    margin: 0;
+}
+
+nav ul li {
+    margin: 5px 0;
+    padding: 0;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #333;
+    font-size: 14px;
+}
+
 @media (max-width: 600px) {
     .flex-container {
         flex-direction: column; /* Stack items vertically on small screens */
