--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,3 @@
-
-
-.flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px; /* Space between items */
-    justify-content: space-between;
-}
-
-.flex-item {
-    flex: 1 1 350px; /* Grow, shrink, basis */
-    padding: 20px;
-    border: 1px solid #333;
-    border-radius: 8px;
-    background-color: #eaeff2;
-}
-
-#about, #contact, #playground-info {
-    flex: 0 100%;
-}
-
 body {
     background-color: #f1f4f6;
     font-family: 'Georgia', serif;
@@ -91,6 +70,36 @@ a {
     padding: 1cap;
 }
 
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: space-between;
+}
+
+.flex-item {
+    flex: 1 1 300px; /* Grow, shrink, basis */
+    padding: 20px;
+    border: 1px solid #333;
+    border-radius: 8px;
+    background-color: #eaeff2;
+}
+
+#about, #contact, #playground-info, #puffins {
+    flex: 0 100%; /* Full width, no wrap */
+}
+
+button {
+    background-color: #2e5a7a;
+    font-family: 'Georgia', serif;
+    color: white; 
+    border: none;
+    padding: 8px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 15px;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -112,31 +121,6 @@ table {
     background-color: #f1f4f6;
 }
 
-button {
-    background-color: #2e5a7a;
-    font-family: 'Georgia', serif;
-    color: white; 
-    border: none;
-    padding: 8px 15px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 15px;
-}
-
-#languageFin {
-    padding: 3px 10px;
-    font-family: 'Georgia', serif;
-    font-size: 13px;
-}
-
-#languageEng {
-    padding: 3px 10px;
-    font-family: 'Georgia', serif;
-    font-size: 13px;
-
-}
-
-/* Styling for the contact form */
 .contact-form {
     border: 1px solid #ccc; /* Thin border around the form */
     padding: 20px;
@@ -146,13 +130,13 @@ button {
     border-radius: 4px; /* Slightly rounded corners */
     box-sizing: border-box;
 }
-/* Styling for form labels */
+
 .contact-form label {
     display: block;
     margin-bottom: 8px;
     font-weight: normal;
 }
-/* Styling for form inputs and textarea */
+
 .contact-form input[type="text"],
 .contact-form input[type="email"],
 .contact-form input[type="tel"],
@@ -164,10 +148,10 @@ button {
     border-radius: 4px;
     box-sizing: border-box;
 }
-/* Styling for the submit button */
+/* submit button */
 .contact-form input[type="submit"] {
-    background-color: #2e5a7a; /* Green background */
-    color: white; /* White text */
+    background-color: #2e5a7a;
+    color: white;
     border: none;
     padding: 10px 20px;
     border-radius: 4px;
@@ -176,59 +160,57 @@ button {
 }
 
 .contact-form input[type="submit"]:hover {
-    background-color: #154168; /* Darker green on hover */
-    background-color: #244969; /* Darker green on hover */
+    background-color: #244969;
 }
 
-/* Hamburger Icon */
+/* hamburger icon */
 .hamburger-menu {
     position: relative;
-    display: flex; /* Always visible */
+    display: flex; /* always visible */
     flex-direction: column;
     justify-content: space-between;
     width: 30px;
     height: 22px;
     cursor: pointer;
-    z-index: 10; /* Ensure it's on top */
-    margin: 20px; /* Adjust as needed */
+    z-index: 10; /* make sure it's on top */
+    margin: 20px; /* adjust as needed */
 }
 
-/* Hamburger icon bars */
+/* hamburger icon bars */
 .hamburger-menu .bar {
     width: 100%;
     height: 4px;
-    background-color: #333; /* Adjust the color */
+    background-color: #333;
     margin: 3px 0;
     border-radius: 2px;
 }
 
-/* Hide the menu by default */
+
 .nav-menu {
-    display: none;
-    position: absolute; /* Position the menu */
-    border: 1px solid #ddd; /* Optional border */
-    background-color: #f1f4f6; /* Background color */
-    border-radius: 5px; /* Optional rounded corners */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional shadow */
+    display: none; /* hide the menu by default */
+    position: absolute; /* position the menu */
+    border: 1px solid #ddd; 
+    background-color: #f1f4f6; 
+    border-radius: 5px; /* rounded corners */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* shadow */
     padding-right: 20px;
 }
 
-/* When active, show the menu */
+/* when active, show the menu */
 .nav-menu.active {
     display: block;
 }
 
+/* styling for menu items */
 nav ul {
     list-style: none;
     padding-left: 25px;
     margin: 0;
 }
-
 nav ul li {
     margin: 5px 0;
     padding: 0;
 }
-
 nav ul li a {
     text-decoration: none;
     color: #333;
@@ -236,27 +218,24 @@ nav ul li a {
 }
 
 
-
-/* Styling for quote section */
 #fetchQuoteButton {
     margin-bottom: 20px;
 }
 
-
 /* Flex container for images */
 .image-grid {
     display: flex;
-    flex-wrap: wrap; /* Allows items to wrap to the next line */
-    gap: 10px; /* Space between images */
-    justify-content: center; /* Center images horizontally */
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
 }
 
 .image-grid img {
     display: block;
     width: 100%; /* Full width of its container */
     height: auto; /* Maintain aspect ratio */
-    border-radius: 8px; /* Optional: Rounded corners */
-    max-width: 200px; /* Maximum width of images */
+    border-radius: 8px; /* Rounded corners */
+    max-width: 200px;
     flex: 1 1 200px; /* Flex-grow and flex-shrink with a basis of 200px */
     box-sizing: border-box; /* Include padding and border in the width */
 
@@ -266,10 +245,12 @@ nav ul li a {
     justify-content: center;
     align-items: center;
     padding-bottom: 20px;
-    height: 320px;
+    height: 350px;;
 }
 .puffin-gallery img {
-    max-height: 300px;
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
     width: auto;
     object-fit: contain;
 
@@ -278,6 +259,20 @@ nav ul li a {
 #fetchTimeButton {
     margin-bottom: 20px;
 }
+
+/*
+#languageFin {
+    padding: 3px 10px;
+    font-family: 'Georgia', serif;
+    font-size: 13px;
+}
+
+#languageEng {
+    padding: 3px 10px;
+    font-family: 'Georgia', serif;
+    font-size: 13px;
+}
+*/
 
 @media (max-width: 600px) {
     .flex-container {
