--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,8 @@ a {
 
 .bordered-section {
     border: 1px solid #333; 
-    padding: 20px; 
+    padding-left: 10px;
+    padding-right: 10px;    
     margin: 10px;
     border-radius: 8px;
     background-color: #eaeff2;
@@ -67,7 +68,9 @@ a {
 .site-container {
     border: 1px solid #333;
     border-radius: 8px;
-    padding: 1cap;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
 }
 
 .flex-container {
@@ -79,7 +82,9 @@ a {
 
 .flex-item {
     flex: 1 1 300px; /* Grow, shrink, basis */
-    padding: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 15px;
     border: 1px solid #333;
     border-radius: 8px;
     background-color: #eaeff2;
@@ -238,11 +243,6 @@ nav ul li a {
     font-size: 14px;
 }
 
-
-#fetchQuoteButton {
-    /* margin-bottom: 20px; */
-}
-
 .puffin-gallery {
     display: flex;
     justify-content: center;
@@ -289,11 +289,22 @@ nav ul li a {
 */
 
 @media (max-width: 600px) {
+
+    .site-container {
+        padding-left: 5px;
+        padding-right: 5px;
+        padding-bottom: 10px;
+    }
+
     .flex-container {
-        flex-direction: column; /* Stack items vertically on small screens */
+        flex-direction: column;
+        padding: 10px;
     }
     .flex-item {
         flex: 1 1 auto; /* Allow items to adjust based on content size */
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-bottom: 10px;
     }
     #puffin-gallery {
         height: 200px;
