--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,8 @@ a {
 
 .flex-item {
     flex: 1 1 300px; /* Grow, shrink, basis */
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
     padding-bottom: 15px;
     border: 1px solid #333;
     border-radius: 8px;
@@ -248,9 +248,10 @@ nav ul li a {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 20px;
-    height: 350px;
+    padding-bottom: 10px;
+    height: 400px;
 }
+
 .puffin-gallery img {
     max-width: 100%;
     max-height: 100%;
@@ -307,8 +308,9 @@ nav ul li a {
         padding-right: 15px;
         padding-bottom: 10px;
     }
-    #puffin-gallery {
-        height: 300px;
+
+    .puffin-gallery {
+        height: 275px;
     }
     
     button {
