--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 
 @font-face {
     font-family: 'Tomatoes';
-    src: url('../fonts/Tomatoes.woff') format('truetype');
+    src: url('../fonts/Tomatoes.woff') format('woff');
     font-weight: 200;
     font-style: normal;
 }
